# General-Local-Agent

./: .env  .env.example  README.md  app.py  main.py  pyproject.toml
agent/: gemini_client.py  graph.py  llm.py  nodes.py  runtime.py  state.py  tools.py
